# attipy

./: .gitignore  LICENSE  README.md  build_docs.bat  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  deploy_public.yaml  make_release.yaml  publish.yaml  publish.yml
docs/: conf.py  index.rst  installation.rst
docs/source/: conf.py  index.rst  usage.rst
src/attipy/: __init__.py  _ahrs.py  _attitude.py  _kalman.py  _kalman_fast.py  _mekf.py  _minimekf.py  _quatops.py  _simulate.py  _smoothing.py  _statespace.py  _transforms.py  _vectorops.py
src/attipy/_ins/: _ahrs.py  _smoothing.py
tests/: conftest.py  old_test_mekf.py  test_ahrs.py  test_attitude.py  test_kalman.py  test_kalman_fast.py  test_mekf.py  test_minimekf.py  test_quatops.py  test_simulate.py  test_smoothing.py  test_statespace.py  test_transforms.py
tests/testdata/: benchmark_pure_attitude_beat_202311A.csv
