[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attipy"
authors = [
  { name="Vegard R. Solum", email="vegard.rorvik.solum@gmail.com" },
]
description = "A Python library for attitude and linear motion estimation using inertial sensor data"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numba",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/vegardrsolum/attipy"
Issues = "https://github.com/vegardrsolum/attipy/issues"

[tool.hatch.version]
path = "src/attipy/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "scipy"  # used as reference implementation for rotations
]

[tool.hatch.envs.test.scripts]
style = [
  "black --check .",
  "isort --check . --profile black"
]
unit = "pytest"
type = "mypy"
complete = [
  "style",
  "type",
  "unit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
files = ["src/attipy"]
strict = true
ignore_missing_imports = true
