[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "attipy"
authors = [
  { name="Vegard R. Solum", email="vegard.rorvik.solum@gmail.com" },
]
description = "Attitude estimation using IMU measurements in Python"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numba",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/vegardrsolum/attipy"
Issues = "https://github.com/vegardrsolum/attipy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/attipy/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "scipy"  # used as reference implementation for rotations
]

[tool.hatch.envs.test.scripts]
style = [
  "black --check .",
  "isort --check . --profile black"
]
unit = "pytest"
type = "mypy"
complete = [
  "style",
  "type",
  "unit",
]

[tool.black]
extend-exclude = "src/attipy/__about__.py"
target-version = ["py312"]

[tool.isort]
skip = ["src/attipy/__about__.py"]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
files = ["src/attipy"]
strict = true
ignore_missing_imports = true
